add box green and yellow

--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
         </div>
         <!-- /.box.red -->
 
-        <div class="box green"></div>
+        <div class="box green">
+            <div class="img">
+                <img src="./img/02.png" alt="">
+                <p>il nostro modello di punta</p> 
+            </div>
+        </div>
         <!-- /.box.green -->
 
-        <div class="box yellow"></div>
+        <div class="box yellow">
+            <div class="img">
+                <img src="./img/03.png" alt="">
+                <p>il nostro modello di punta</p> 
+            </div>
+        </div>
         <!-- /.box.yellow -->
 
     </main>
