add class button and exercise complete

--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
 
     <main id="site_main" class="container">
 
+
+
         <div class="box red">
+
+            <div class="button">
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+            </div>
+            <!-- /.button -->
+            
             <div class="img">
                 <img src="./img/01.png" alt="">
-                <p>il nostro modello di punta</p> 
+                <p>il nostro modello di punta</p>
             </div>
         </div>
         <!-- /.box.red -->
@@ -28,7 +38,7 @@
         <div class="box green">
             <div class="img">
                 <img src="./img/02.png" alt="">
-                <p>il nostro modello di punta</p> 
+                <p>il nostro modello di punta</p>
             </div>
         </div>
         <!-- /.box.green -->
@@ -36,7 +46,7 @@
         <div class="box yellow">
             <div class="img">
                 <img src="./img/03.png" alt="">
-                <p>il nostro modello di punta</p> 
+                <p>il nostro modello di punta</p>
             </div>
         </div>
         <!-- /.box.yellow -->
@@ -44,7 +54,7 @@
     </main>
     <!-- /#site_main -->
 
-    
+
 
 </body>
 
